--- a/public/styles.css
+++ b/public/styles.css
@@ -18,7 +18,15 @@ body {
 .tiny{
     font-size: 1.1rem!important;
 }
-
+#wait_for_response{
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    background: rgba(0,0,0,.4);
+    z-index: 9999;
+    top: 0;
+    left: 0;
+}
 #page {
     position: fixed;
     width: 100%;
